local/nodeport-existing.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"gateway.istio.io/managed":"istio.io-gateway-controller","gateway.networking.k8s.io/gateway-name":"mcp-gateway","istio.io/dataplane-mode":"none"},"name":"mcp-gateway-np","namespace":"gateway-system"},"spec":{"externalTrafficPolicy":"Cluster","internalTrafficPolicy":"Cluster","ports":[{"appProtocol":"http","name":"mcp","nodePort":30080,"port":8080,"protocol":"TCP","targetPort":8080},{"appProtocol":"http","name":"keyc [...]
  creationTimestamp: "2026-01-28T09:44:14Z"
  labels:
    gateway.istio.io/managed: istio.io-gateway-controller
    gateway.networking.k8s.io/gateway-name: mcp-gateway
    istio.io/dataplane-mode: none
  name: mcp-gateway-np
  namespace: gateway-system
  resourceVersion: "1185"
  uid: fce34fdd-9dde-414b-80e2-7629e2738808
spec:
  clusterIP: 10.96.21.113
  clusterIPs:
  - 10.96.21.113
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - appProtocol: http
    name: mcp
    nodePort: 30080
    port: 8080
    protocol: TCP
    targetPort: 8080
  - appProtocol: http
    name: keycloak
    nodePort: 30089
    port: 8002
    protocol: TCP
    targetPort: 8002
  selector:
    gateway.networking.k8s.io/gateway-name: mcp-gateway
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
