local/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: team-alpha-gateway
  namespace: gateway-system
  annotations:
    networking.istio.io/service-type: NodePort
  labels:
    gateway.io/name: team-beta-gateway  
spec:
  gatewayClassName: istio
  listeners:
  - allowedRoutes:
      namespaces:
        from: All
    hostname: alpha.127-0-0-1.sslip.io
    name: mcp
    port: 8080
    protocol: HTTP
  - allowedRoutes:
      namespaces:
        from: All
    hostname: '*.alpha.mcp.local'
    name: mcps
    port: 8080
    protocol: HTTP
